# gs_playground

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
benchmark/: mtx_batch_minimal.ipynb
benchmark/assets/franka_emika_panda_robotiq/xmls/: panda_robotiq_224.xml  table30_00_simple_room.xml
benchmark/scripts/: prune_gaussians.py
demo/live_demo/: replay.py
demo/live_demo/replay_data_16/: episode_00000.jsonl  episode_00001.jsonl  episode_00002.jsonl  episode_00003.jsonl  episode_00004.jsonl  episode_00005.jsonl  episode_00006.jsonl  episode_00007.jsonl  episode_00008.jsonl  episode_00009.jsonl  episode_00010.jsonl  episode_00011.jsonl  episode_00012.jsonl  episode_00013.jsonl  episode_00014.jsonl  episode_00015.jsonl
demo/live_demo/replay_data_16/replay/: ep_00000.npz  ep_00001.npz  ep_00002.npz  ep_00003.npz  ep_00004.npz  ep_00005.npz  ep_00006.npz  ep_00007.npz  ep_00008.npz  ep_00009.npz  ep_00010.npz  ep_00011.npz  ep_00012.npz  ep_00013.npz  ep_00014.npz  ep_00015.npz
demo/navigation/: nav_collect_common.py  robot_locomotion.py
demo/navigation/assets/g1/: head.ply  left_ankle_pitc_linkh.ply  left_ankle_roll_link.ply  left_elbow_link.ply  left_hip_pitch_link.ply  left_hip_roll_link.ply  left_hip_yaw_link.ply  left_knee_link.ply  left_shoulder_pitch_link.ply  left_shoulder_roll_link.ply  left_shoulder_yaw_link.ply  left_wrist_pitch_link.ply  left_wrist_roll_link.ply  left_wrist_yaw_link.ply  pelvis.ply  (+16 more)
demo/navigation/configs/: g1_scene1.json  go2_scene1.json
demo/navigation/utils/: __init__.py  controller.py  policy.py  robot.py
(+66 files in other folders)
